# canton-observer

./: .gitignore  BUILD_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/SEED_ISSUES/: 01-syndicated-loan-scenario.md  02-stablecoin-reserve-scenario.md  03-csv-report.md  04-reference-detection.md  05-claim-rule-plugins.md  06-localnet-ci.md
.github/workflows/: ci.yml
docs/: LICENSE.md  architecture.md  ledger-api-notes.md  methodology.md
src/canton_observer/: cli.py  models.py
src/canton_observer/analysis/: __init__.py  consensus.py  reducibility.py  visibility.py
src/canton_observer/ingest/: __init__.py  base.py  ledger_api.py  simulation.py
src/canton_observer/report/: __init__.py  html_out.py  json_out.py  terminal.py
src/canton_observer/scenarios/: __init__.py  bilateral_repo.yaml  fund_tokenization.yaml  tri_party_settlement.yaml
tests/: test_analysis.py  test_ledger_api.py  test_scenarios_and_cli.py
