[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canton-observer"
version = "0.1.0"
description = "Read-only observer completeness diagnostics for Canton ledger views"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vishnu Govind" }]
dependencies = [
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
canton-observer = "canton_observer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/canton_observer"]

[tool.hatch.build.targets.wheel.force-include]
"src/canton_observer/scenarios" = "canton_observer/scenarios"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = ["localnet: requires a running Canton LocalNet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["canton_observer.analysis"]
